fix(Call): set right positioning hen caller title is too big

--- a/src/components/Call/Call.css
+++ b/src/components/Call/Call.css
@@ -50,8 +50,8 @@
   display: flex;
   flex-direction: row;
   padding-bottom: 20px;
-  align-items: center;
-  align-content: center;
+  align-items: flex-start;
+  align-content: flex-start;
   justify-content: flex-start;
 }
 
